# wifictl

./: Cargo.toml
src/: main.rs  netplan.rs
